# basic

./: .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: RF24.cpp.5DBC4FEEE58D1CEA.idx  RF24.h.BADD245DD87822A2.idx  RF24_arch_config.h.5E17F31E6ACAAE43.idx  RF24_config.h.EDF474AFB9FB8E51.idx  align.h.E73CA3DD1EFD4BEE.idx  aligned_buffer.h.99E9F3CC999076BA.idx  alloc_traits.h.1CE3644061BE26AF.idx  alloc_traits.h.C610CAE23F34F71E.idx  allocated_ptr.h.E404976086824162.idx  allocator.h.449730C856C8E4D5.idx  array.FC250B70533B39DE.idx  atomic.364D7D826DDE3207.idx  atomic_base.h.BD2AE6A15E80DDD6.idx  atomic_lockfree_defines.h.FD0D6C64DF34D281.idx  atomic_timed_wait.h.DE20C7DC50E74ADD.idx  atomic_wait.h.E3054CA93ED854E8.idx  basic_ios.h.83574A0DC1B27879.idx  basic_ios.tcc.2948A74529862D2F.idx  basic_string.h.90E1F85961139FD4.idx  basic_string.tcc.37D6593448D38C09.idx  binders.h.2DFEC2665F2FA9BB.idx  bit.952802BBE100929D.idx  c++config.h.E37AD4524810701E.idx  char_traits.h.17F83F841536EA2B.idx  charconv.C7923FB4666B749A.idx  charconv.h.E4D81154A26263CD.idx  chrono.0126C03A46274BAC.idx  chrono.h.A8115DD5572FD140.idx  chrono_io.h.4A9F585550A66581.idx  climits.B3D952FFFEFD0120.idx  codecvt.h.EB030E8BAD72103A.idx  compare.5C7A591933B291EE.idx  compatibility.cpp.5480FA4A2AF43F88.idx  compatibility.h.7900BF9092B7A9C2.idx  concepts.C74EC1D6C41E7141.idx  concurrence.h.38009E00B6216B8C.idx  cpp_type_traits.h.BDF5D808F35FC644.idx  cstddef.6C0CCEB6E045A261.idx  ctype.h.B268CEA0CECCFC59.idx  ctype_base.h.7642E955D6BC5CDD.idx  (+142 more)
src/: drone.cpp  gbs.cpp  mpu6050.cpp
